Fix scrollbar issue in SceneView

--- a/src/Pages/ADT3DScenePage/ADT3DScenePage.scss
+++ b/src/Pages/ADT3DScenePage/ADT3DScenePage.scss
@@ -49,6 +49,7 @@
     .cb-scene-builder-and-viewer-container {
         flex-grow: 1;
         height: 100%;
+        overflow: auto;
     }
 
     .cb-scene-list-card-wrapper {
